--- a/css/style-menu.css
+++ b/css/style-menu.css
@@ -89,6 +89,11 @@ header {
   color: #ffffff;
   border-radius: 3px;
 }
+.hamburger {
+  position: absolute;
+  right: 0;
+}
+
 .no-touch .cd-dropdown-trigger:hover {
   background-color: #171b46;
 }
@@ -1183,7 +1188,7 @@ Style Renault
   }
   .logo-title{
     position: absolute;
-    margin-left:15px;
+    margin: 0 0 15px 15px;
     /*width:110px;*/
     /*height: 70px;*/
     /*position: absolute;*/
