--- a/css/main.css
+++ b/css/main.css
@@ -93,7 +93,7 @@ img {
 
 .h-content-inner ul li {
        list-style:disc;
-       margin:5px 0px 5px 30px;
+       margin:10px 0px 10px 30px;
 }
 
 ul li.clearfix {
@@ -806,7 +806,7 @@ list-style: none;
 /*{{{ =Footer*/
 
 .foot {
-    padding: 30px 0;
+    padding: 30px 15px;
 }
 
 .bot-nav {
