--- a/css/media-quary.css
+++ b/css/media-quary.css
@@ -5,6 +5,9 @@
   .cd-dropdown-content {
     top: -30px;
   }*/
+  .mobile-wrapp {
+    display: none;
+  }
 }
 @media screen and (max-width: 940px) {
   .h-wrap,
@@ -61,9 +64,13 @@
   .h-wrap, .main-banner, #slider, #image_container li, .top-nav{
     width:750px;
   }
-  #slider{
-    height:395px;
+  .main-banner,
+  .right-banners,
+  #cars_list,
+  a.mcars {
+    display: none;
   }
+
   .topbar{
     display: none;
   }
@@ -77,13 +84,33 @@
   .cd-dropdown .cd-dropdown-content {
     top: 0;
   }
+  /*form*/
+  .form-horizontal .control-label {
+    /*float:none;*/
+  }
+  .form-horizontal .controls {
+    margin: 0;
+  }
+  div.form-horizontal input,
+  div.form-horizontal textarea,
+  div.form-horizontal select,
+  .controls .inputtext {
+    width: 95%;
+  }
+  .required{
+    /*display: inline-block;*/
+    vertical-align: top;
+  }
 
 }
 
 @media screen and (max-width: 780px){
   .h-wrap, .main-banner, #slider, #image_container li, .top-nav{
-    width:95%;
-    margin: 0 10px;
+    width:100%;
+    /*margin: 0 10px;*/
+  }
+  .h-content-inner {
+    padding: 0 15px;
   }
   #slider{
     height:395px;
@@ -94,7 +121,29 @@
   .diller{
     display: none;
   }
+  /*akcii*/
+  .l_articles .news_date {
+    float: none;
+    height:auto;
+    padding: 0;
+    width: auto;
+    display: inline-block;
+    padding: 1px 8px;
+    background-color: #FFCC33;
+  }
 
+  .l_articles .news_content {
+    margin: 0;
+  }
+
+  .h-content-inner .l_articles .news_date span {
+    display: inline;
+    font-size:12px;
+  }
+
+  .h-content-inner ul li {
+    margin-left:0;
+  }
 }
 
 @media screen and (max-width: 700px){
@@ -103,11 +152,20 @@
     width:100%;
     margin-bottom: 10px;
   }
+  .breadcrumbs,
+  .breadcrumbs + h1 {
+    display: none;
+  }
   .h-content-inner {
     margin-left: 0;
     padding-right:5px;
   }
+}
 
+@media screen and (min-width: 700px){
+  .form-horizontal .control-group:before, .form-horizontal .control-group:after {
+    display: inline-block;;
+  }
 }
 
 @media screen and (max-width: 480px) {
@@ -147,5 +205,18 @@
 
   .footer-copyright {
     font-size: 1rem;
+  }
+
+}
+
+@media screen and (max-width: 380px) {
+  .h-content-inner ul li {
+    margin: 20px 0;
+  }
+  .l_articles.with-img .article_pic {
+    display: none;
+  }
+  .l_articles.with-img .article_text {
+    margin: 0;
   }
 }
